fix app layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .main-container {
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   background-color: #daeeec;
   margin: 0 auto;
   display: flex;
@@ -26,6 +26,7 @@
 
 .content {
   width: 95%;
+  margin: 3rem 0;
 }
 
 .form-header {
